[package]
name = "filecrypt"
version = "0.1.0"
authors = ["nhweston <nhweston1997@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "^0.9"
anyhow = "^1.0"
base64 = "^0.13"
generic-array = "^0.4"
json = "^0.12"
rand = { version = "^0.8", features = ["getrandom"] }
rust-crypto = "^0.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
uuid = "^0.5"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
